# llm-bias-study

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
data/: prompts_sample.csv
src/llm_bias_study/: __init__.py  analysis.py  cli.py  config.py  evaluation.py  prompt_loader.py  runner.py  schemas.py  storage.py
src/llm_bias_study/clients/: anthropic_client.py  base.py  gemini_client.py  mock_client.py  openai_client.py  xai_client.py
